# sophia

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
components/: summarization.py
static/: Script.js  styles.css
templates/: index.html  styles.css
